--- a/food_x/pubspec.yaml
+++ b/food_x/pubspec.yaml
@@ -18,10 +18,16 @@ dependencies:
   flutter_statusbarcolor: ^0.2.3
   flutter_slidable: ^0.5.7
   shared_preferences: ">=0.5.8 <2.0.0"
+  json_annotation: ^3.1.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner: ^1.10.0
+  json_serializable: ^3.5.0
+
 
 flutter:
 
