--- a/food_x/pubspec.yaml
+++ b/food_x/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   flutter_slidable: ^0.5.7
   shared_preferences: ">=0.5.8 <2.0.0"
   json_annotation: ^3.1.0
-
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
@@ -27,7 +27,6 @@ dev_dependencies:
 
   build_runner: ^1.10.0
   json_serializable: ^3.5.0
-
 
 flutter:
 
