--- a/food_x/pubspec.yaml
+++ b/food_x/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   json_annotation: ^3.1.0
   chopper: ^3.0.3
   logging: ^0.11.4
+  provider: ^4.3.2+2
+  equatable: ^1.2.5
 
 dev_dependencies:
   flutter_test:
