--- a/food_x/pubspec.yaml
+++ b/food_x/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   logging: ^0.11.4
   provider: ^4.3.2+2
   equatable: ^1.2.5
+  moor_flutter: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -31,6 +32,7 @@ dev_dependencies:
   build_runner: ^1.10.0
   json_serializable: ^3.5.0
   chopper_generator: ^3.0.5
+  moor_generator: 3.2.0
 
 flutter:
 
